--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="top.css">
+    <link rel="stylesheet" href="middle.css">
+    <link rel="stylesheet" href="bottom.css">
 
 
 </head>
@@ -186,6 +188,8 @@
             <div class="more-forecasts cat">
 
                 <div>more forecasts</div>
+
+                <svg set="ui" name="triangle-down" class="Icon--icon--2AbGu Icon--lightTheme--3RdOJ LanguageSelector--arrowIcon--AQWbj" theme="light" style="width: 17px;" data-testid="Icon" aria-hidden="true" role="img" viewBox="0 0 24 24"><title>Arrow down</title><path d="M23.765 5.167h-23.53l11.75 13.666 11.779-13.666z"></path></svg>
 
             </div>
         
