--- a/index.html
+++ b/index.html
@@ -572,7 +572,26 @@
 
         </div>
 
+    </div>
 
+    </div>
+
+    <div class="footer">
+
+        <div class="left-column">
+
+        </div>
+
+        <div class="middle-column">
+
+            <img src="/Assets/footer.png" alt="footer image" style="width: 100%;"/>
+
+        </div>
+
+        <div class="right-column">
+
+        </div>
+        
     </div>
     
 </body>
